# docker-agent

./: README.md  docker-agent.ipynb  main.py  pyproject.toml
research/: structured_output.ipynb
src/: prompts.py  state.py  tools.py  utils.py
src/docker_wrapper/: methods.py  schemas.py
